fixed a wrapping problem

--- a/public/wac/css/styles.css
+++ b/public/wac/css/styles.css
@@ -210,6 +210,13 @@
     }
 
 
+/* -------------------------- global overrides -------------------------- */
+
+.forced_wrap {
+    word-break: break-all;
+}
+
+
 /* -------------------------- Persistence View Loader -------------------------- */
 
 	#formTable {
